--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,9 +42,9 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.507.0",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.2",
     "react-resizable-panels": "^3.0.1",
     
@@ -56,6 +56,7 @@
     "vaul": "^1.1.2",
     "zod": "^3.24.4"
   },
+    "react-helmet-async": "^1.3.0",
   "scripts": {
     "start": "craco start",
     "build": "craco build",
